--- a/package.json
+++ b/package.json
@@ -3,17 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@noriginmedia/react-spatial-navigation": "^2.9.0",
+    "hls.js": "^0.12.4",
     "react": "^16.9.0",
+    "react-animations": "^1.0.0",
+    "react-animejs": "^0.5.3",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2",
-    "twitch": "^3.5.0"
+    "react-scroll": "^1.7.14",
+    "react-spring": "^8.0.27",
+    "scroll-into-view": "^1.11.0",
+    "scroll-into-view-if-needed": "^2.2.20",
+    "styled-components": "^4.4.0",
+    "twitch": "^3.5.0",
+    "twitch-get-stream": "^0.5.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "webpack-dev-server --progress --colors",
+    "build": "webpack --mode production",
+    "build-ipk": "yarn build && bash tools/build.sh",
+    "install-ipk": "yarn build-ipk && bash tools/install.sh"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,7 +41,17 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.6.0",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
+    "babel-eslint": "10.0.3",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
     "eslint": "^6.4.0",
-    "eslint-plugin-react": "^7.14.3"
+    "eslint-plugin-react": "^7.14.3",
+    "webpack": "^4.41.1",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2"
   }
 }
