--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "streamer",
   "version": "0.1.0",
   "private": true,
+  "jest": {
+    "modulePathIgnorePatterns": [
+      "CLI",
+      "node_modules/@babel"
+    ]
+  },
   "dependencies": {
     "@noriginmedia/react-spatial-navigation": "^2.9.0",
     "hls.js": "^0.12.4",
@@ -12,7 +18,7 @@
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2",
     "react-scroll": "^1.7.14",
-    "react-spring": "^8.0.27",
+    "react-transition-group": "^4.3.0",
     "scroll-into-view": "^1.11.0",
     "scroll-into-view-if-needed": "^2.2.20",
     "styled-components": "^4.4.0",
