--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "scroll-into-view-if-needed": "^2.2.20",
     "styled-components": "^4.4.0",
     "twitch": "^3.5.0",
-    "twitch-get-stream": "^0.5.0"
+    "twitch-get-stream": "^0.5.0",
+    "webpack": "^4.41.1",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2"
   },
   "scripts": {
     "start": "webpack-dev-server --progress --colors",
