--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "scroll-into-view-if-needed": "^2.2.20",
     "styled-components": "^4.4.0",
     "twitch": "^3.5.0",
-    "twitch-get-stream": "^0.5.0",
+    "twitch-get-stream": "^0.6.0",
     "webpack": "^4.41.1",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2"
   },
   "scripts": {
     "start": "webpack-dev-server --progress --colors",
-    "build": "webpack --mode production",
-    "build-ipk": "yarn build && bash tools/build.sh",
-    "install-ipk": "yarn build-ipk && bash tools/install.sh"
+    "build": "webpack --mode development",
+    "build-ipk": "npm run build && bash tools/build.sh",
+    "install-ipk": "npm run build-ipk && bash tools/install.sh"
   },
   "eslintConfig": {
     "extends": "react-app"
