:fire: Create a custom hook for using twitch api

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "scroll-into-view": "^1.11.0",
     "scroll-into-view-if-needed": "^2.2.20",
     "styled-components": "^4.4.0",
-    "twitch": "^3.5.0",
+    "twitch": "^4.2.7",
+    "twitch-auth": "^4.2.7",
     "twitch-get-stream": "^0.6.0",
     "webpack": "^4.41.1",
     "webpack-cli": "^3.3.9",
